# bevy_boiled_down

./: Cargo.toml
crates/bevy_asset/: Cargo.toml
crates/bevy_dev_tools/: Cargo.toml
crates/bevy_dev_tools/src/: lib.rs
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: default_plugins.rs  lib.rs  prelude.rs
crates/bevy_state/: Cargo.toml
src/: lib.rs
