[package]
name = "bevy_internal"
version = "0.15.0-dev"
edition = "2021"
description = "An internal Bevy crate used to facilitate optional dynamic linking via the 'dynamic_linking' feature"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
categories = ["game-engines", "graphics", "gui", "rendering"]

[features]
trace = [
  "bevy_app/trace",
  "bevy_asset?/trace",
  "bevy_ecs/trace",
  "bevy_log/trace",
]
trace_chrome = ["bevy_log/tracing-chrome"]
trace_tracy_memory = ["bevy_log/trace_tracy_memory"]
trace_tracy = ["bevy_log/tracing-tracy"]

detailed_trace = ["bevy_utils/detailed_trace"]

sysinfo_plugin = ["bevy_diagnostic/sysinfo_plugin"]


serialize = [
  "bevy_core/serialize",
  "bevy_ecs/serialize",
  "bevy_time/serialize",
  "bevy_math/serialize",
]
multi_threaded = [
  "bevy_asset?/multi_threaded",
  "bevy_ecs/multi_threaded",
  "bevy_tasks/multi_threaded",
]
async-io = ["bevy_tasks/async-io"]


# Used to disable code that is unsupported when Bevy is dynamically linked
dynamic_linking = ["bevy_diagnostic/dynamic_linking"]

# Enable assertions to check the validity of parameters passed to glam
glam_assert = ["bevy_math/glam_assert"]

# Enable assertions in debug builds to check the validity of parameters passed to glam
debug_glam_assert = ["bevy_math/debug_glam_assert"]

# Enables the built-in asset processor for processed assets.
asset_processor = ["bevy_asset?/asset_processor"]

# Enables watching the filesystem for Bevy Asset hot-reloading
file_watcher = ["bevy_asset?/file_watcher"]

# Enables watching embedded files for Bevy Asset hot-reloading
embedded_watcher = ["bevy_asset?/embedded_watcher"]

# Enable system stepping support
bevy_debug_stepping = [
  "bevy_ecs/bevy_debug_stepping",
  "bevy_app/bevy_debug_stepping",
]

# Provides a collection of developer tools
bevy_dev_tools = ["dep:bevy_dev_tools"]

# Enable built in global state machines
bevy_state = ["dep:bevy_state"]

# Enables source location tracking for change detection, which can assist with debugging
track_change_detection = ["bevy_ecs/track_change_detection"]

# Enable function reflection
reflect_functions = [
  "bevy_reflect/functions",
  "bevy_app/reflect_functions",
  "bevy_ecs/reflect_functions",
]

[dependencies]
# bevy
bevy_a11y = { path = "../bevy_a11y", version = "0.15.0-dev" }
bevy_app = { path = "../bevy_app", version = "0.15.0-dev" }
bevy_core = { path = "../bevy_core", version = "0.15.0-dev" }
bevy_derive = { path = "../bevy_derive", version = "0.15.0-dev" }
bevy_diagnostic = { path = "../bevy_diagnostic", version = "0.15.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.15.0-dev" }
bevy_state = { path = "../bevy_state", optional = true, version = "0.15.0-dev" }
bevy_log = { path = "../bevy_log", version = "0.15.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.15.0-dev" }
bevy_ptr = { path = "../bevy_ptr", version = "0.15.0-dev" }
bevy_reflect = { path = "../bevy_reflect", version = "0.15.0-dev", features = [
  "bevy",
] }
bevy_time = { path = "../bevy_time", version = "0.15.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.15.0-dev" }
bevy_tasks = { path = "../bevy_tasks", version = "0.15.0-dev" }
# bevy (optional)
bevy_asset = { path = "../bevy_asset", optional = true, version = "0.15.0-dev" }
bevy_dev_tools = { path = "../bevy_dev_tools", optional = true, version = "0.15.0-dev" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
